--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% load static %}
+{% load my_tags %}
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -19,7 +20,7 @@
         {% endblock %}
         {% block content_contacts %}
         {% endblock %}
-        {% block content_product %}
+        {% block content_product1 %}
         {% endblock %}
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
