--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,6 +1,7 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
+{% load my_tags %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">SkyStoreProduct</h1>
     <p class="lead">SkyStoreProduct - это отличный магазин продуктов</p>
@@ -14,7 +15,7 @@
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">{{ object_prod|title }}</h4>
                             {% if object_prod|title == 'Брусника' %}
-                            <img src="/static/br.jpg"  width="210" height="130">
+                             <img src="{{ object.img|mediapath }}" />
                             <div class="card-body">
                                 <a class="btn btn-lg btn-block btn-outline-primary" href="/product/">Подробнее</a>
                             </div>
