--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -1,6 +1,6 @@
 {% extends 'catalog/base.html' %}
 
-{% block content_product %}
+{% block content_product1 %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">SkyStoreProduct</h1>
     <p class="lead">SkyStoreProduct - это отличный магазин продуктов</p>
