--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="card-body">
                     <ul class="list-unstyled ">
-                        <img src="{{ object_list_prod.0.image|media_url }}" style="width: 100%;"/>
+                        <img src="{{ object_list_prod.0.image|mediapath }}" style="width: 100%;"/>
                         <li> {{object_list_prod.0.image}} </li>
                         <li> {{object_list_prod.0.price}} рублей за кг </li>
                         <li> ____________________________ </li>
