--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -1,19 +1,20 @@
 <!doctype html>
 {% load static %}
 {% load my_tags %}
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>SkyStoreProduct</title>
+        <title>Витаминка</title>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     </head>
     <body>
         <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-            <h5 class="my-0 mr-md-auto font-weight-normal">SkyStoreProduct</h5>
+            <h5 class="my-0 mr-md-auto font-weight-normal">Витаминка</h5>
             <nav class="ms-5">
                 <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
                 <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+                <a class="p-2 btn btn-outline-primary" href=" {% url 'blog:list' %}">Блог</a>
             </nav>
         </div>
         {% block  content %}
@@ -21,7 +22,7 @@
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col-12 col-md">
-                    SkyStoreProduct
+                    Витаминка
                     <small class="d-block mb-3 text-muted">&copy; 2023</small>
                 </div>
                 <div class="col-6 col-md">
@@ -37,7 +38,7 @@
                 <div class="col-6 col-md">
                     <h5>Дополнительно</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Мы пишем</a></li>
+                        <li><a class="text-muted" href="{% url 'blog:list' %}">Мы пишем</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
