--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -3,13 +3,16 @@
 {% block content %}
 {% load my_tags %}
 
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Витаминка</h1>
-    <p class="lead">Витаминка - магазин свежих ягод</p>
-</div>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Витаминка</h1>
+        <p class="lead">Витаминка - магазин свежих ягод</p>
+        <div class="col-5 mb-5">
+            <a class="btn btn-outline-primary" href=" {% url 'catalog:create' %} ">Добавить продукт</a>
+        </div>
+    </div>
 
-<div class="container">
-    <div class="row text-center">
+    <div class="container">
+        <div class="row text-center">
             {% for product in product_list %}
                 <div class="col-3">
                     <div class="card mb-4 box-shadow">
@@ -17,11 +20,13 @@
                             <h4 class="my-9 font-weight-normal" >{{ product|title }}</h4>
                             <img src="{% mediapath product.image %}" style="width: 90%;"/>
                             <p class="card-text">{{ product.description|truncatechars:100 }}</p>
-                            <a class="btn btn-lg btn-block btn-outline-primary" href="/product/{{ product.pk }}">Подробнее</a>
+                            <a class="btn btn-outline-primary" href="/product/{{ product.pk }}">Подробнее</a>
+                            <a class="btn btn-outline-primary" href="{% url 'catalog:update' product.pk %}">Редактировать</a>
+                            <a class="btn btn-outline-primary" href="{% url 'catalog:delete' product.pk %}">Удалить</a>
                         </div>
                     </div>
                 </div>
             {% endfor %}
+        </div>
     </div>
-</div>
 {% endblock %}
