--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -23,6 +23,11 @@
                         <li> ____________________________ </li>
                         <li> Информация актуальна на </li>
                         <li> {{product.last_modified_date}}</li>
+                        <li> Версия:</li>
+                        {% for v in version %}
+                            {{v.number_version}}
+                            <li></li>
+                        {% endfor%}
                     </ul>
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
                 </div>
