--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -17,7 +17,8 @@
                   {{form.as_p}}
               </div>
               <div class="card-footer">
-                  <button type="submit" class="btn btn-success" >Регистрация</button>
+                  <button type="submit" class="btn btn-success">Регистрация</button>
+                  <a class="btn btn-danger" href="{% url 'users:verify_email' %}">Подтвердить почту</a>
               </div>
             </div>
           </div>
