--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -26,6 +26,7 @@
                                             {{v.number_version}}
                                      {% endfor%}</li>
                         <li> Автор: {{object.user|default:'Не указан'}}</li>
+                        <li>Опубликовано: {{product.is_published}} </li>
                     </ul>
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
                 </div>
